--- a/admin/css/ste-style.css
+++ b/admin/css/ste-style.css
@@ -23,7 +23,30 @@
 :-moz-placeholder { /* Firefox 18- */
   color: #000000;
 }
+/* header section */
+.ste-header-section {
+  margin-left:-20px;
+  background-color:#2F333B !important; 
+}
+/* .ste-flex-center { background-color:#2F333B; } */
+  .ste-header-tel a { color:#9195a2; }
+  .ste-header-email a { color:#9195a2; }
 
+.tab-content {min-height:450px;}
+
+/* tabset start */
+.nav-tabs {
+  border-bottom: none !important;
+}
+
+.nav-tabs .nav-link.active {
+    color: #3688e1 !important;
+    border-bottom: 2px solid #3688e1 !important;
+}
+.nav-tabs { border-bottom: none !important;}
+
+
+  /* tabset end */  
 /* Flex Basis */
 .ste-flexb-5 { flex-basis: 5%; }
 .ste-flexb-6 { flex-basis: 6%; }
@@ -39,6 +62,7 @@
 .ste-flexb-40 { flex-basis: 40%; }
 .ste-flexb-49 { flex-basis: 49%; }
 .ste-flexb-50 { flex-basis: 50%; }
+.ste-flexb-55 { flex-basis: 55%; }
 .ste-flexb-60 { flex-basis: 60%; }
 .ste-flexb-65 { flex-basis: 65%; }
 .ste-flexb-70 { flex-basis: 70%; }
@@ -51,6 +75,7 @@
 [class*="ste-col-"] { display: inline-block; }
 
 .ste-col-10 { width: 10%; }
+.ste-col-15 { width: 15%;}
 .ste-col-20 { width: 20%; }
 .ste-col-25 { width: 25%; }
 .ste-col-30 { width: 30%; }
@@ -63,6 +88,7 @@
 .ste-col-70 { width: 70%; }
 .ste-col-75 { width: 75%; }
 .ste-col-80 { width: 80%; }
+.ste-col-85 { width: 85%; }
 .ste-col-90 { width: 90%; }
 .ste-col-95 { width: 95%; }
 .ste-col-100 { width: 100%; }
@@ -74,6 +100,7 @@
 /* Content align Classes */
 .ste-flex-center { align-items: center; justify-content: center; }
 .ste-align-center { align-items: center; }
+.ste-align-right { align-items: center; }
 .ste-justify-center { justify-content: center; }
 .ste-justify-space { justify-content: space-between; }
 .ste-justify-space-even { justify-content: space-evenly; }
@@ -86,18 +113,22 @@
 .ste-p-rm-0-5 { padding: 0.5rem; }
 .ste-px-1 { padding-left: 1rem; padding-right: 1rem; }
 .ste-p-1 { padding: 1rem; }
+.ste-py-1 { padding-top: 1rem; padding-bottom: 1rem; }
 .ste-py-2 { padding-top: 2rem; padding-bottom: 2rem; }
 .ste-px-1-5 { padding-left: 1.5rem; padding-right: 1.5rem;  }
 .ste-p-2-5 { padding: 2.5rem; }
 .ste-px-0-5{ padding-left: 0.5rem; padding-right: 0.5rem; }
-
+.ste-autosponder-creator {padding-right:-50px;}
 /* Margin Classes */
+.ste-mb-0 {  margin-bottom:0rem; }   
+.ste-m-20 {margin-left:-20px !important; }
 .ste-m-0 { margin: 0; }
 .ste-m-auto { margin: auto; }
 .ste-my-p3 { margin-top: 0.3rem; margin-bottom: 0.3rem; }
 
 .ste-mb-0-4 { margin-bottom: 0.4rem; }
 .ste-mb-1 {margin-bottom: 1rem; }
+.ste-mb-2 {margin-bottom: 2rem; }
 
 .ste-my-1 { margin-top: 1rem; margin-bottom: 1rem; }
 .ste-my-2 { margin-top: 2rem; margin-bottom: 2rem; }
@@ -118,10 +149,13 @@
 .ste-ml-10 { margin-left: 10rem; }
 
 .ste-mr-0-5 { margin-right: 0.5rem; }
+.ste-mr-1 {margin-right:1rem;}
+
 
 .ste-mt-1 { margin-top: 1rem; }
 .ste-mt-2 { margin-top: 2rem; }
 .ste-mt-0-2 { margin-top: 0.2rem; }
+.ste-m-all {margin:30px 30px 30px 30px}
 
 /* Text Align Classes */
 .ste-text-center { text-align: center; }
@@ -130,7 +164,10 @@
 
 /* Border Classes */
 .ste-border-1 { border: 1px solid; }
-.ste-border-2 { border: 2px solid; }
+.ste-border-2 { border: 1px dashed; border-radius:10px; }
+.ste-border-3 {border:1px solid #d4d8d8 !important;  }
+.ste-border-4 {border:1px solid #d4d8d8 !important; border-radius:10px;  }
+
 
 /* Border Color Classes */
 .ste-border-primary { border-color: #007bff; }
@@ -142,9 +179,14 @@
 .ste-border-light { border-color: #f8f9fa; }
 .ste-border-dark { border-color: #343a40; }
 .ste-border-default { border-color: transparent; }
+/* Background color classes */
 
+.ste-clr-wh {background-color:white;}
+.ste-clr-bg {background-color:#f4f5f6;}
+.ste-clr-red {background-color:red;}
 /* Font Size Classes */
 .ste-font-1 { font-size: 1vh; }
+.ste-font-1-5 { font-size: 1.5vh; }
 .ste-font-2 { font-size: 2vh; }
 .ste-font-2-2{ font-size: 2.2vh; }
 .ste-font-2-5 { font-size: 2.5vh; }
@@ -180,7 +222,7 @@
 /* Buttons Classes */
 .ste-btn-primary { background: #007bff; color: #ffffff; }
 .ste-btn-secondary { background: #6c757d; color: #ffffff; }
-.ste-btn-success { background: #28a745; color: #ffffff; }
+.ste-btn-success { height:auto; color:#5597e4 !important; background-color: #dfeff9; border-bottom:2px solid;}
 .ste-btn-danger { background: #dc3545; color: #ffffff; }
 .ste-btn-warning { background: #ffc107; color: #000000; }
 .ste-btn-info { background: #17a2b8; color: #ffffff; }
@@ -188,25 +230,26 @@
 .ste-btn-dark { background: #343a40; color: #ffffff; }
 .ste-btn-default { background: transparent; color: #007bff; }
 
-.ste-header-title { font-size: 5vh; margin: 0; text-align:center; }
+.ste-header-title { color:white; font-size: 2.5vh; margin-left: 1em; text-align:left; }
 .ste-help-img { width: 15vh; display: inline-block; }
 /*.ste-help-title { font-size: 2.5vh; }
 .ste-header-tel { font-size: 2.5vh; }
 .ste-header-email { font-size: 2.5vh; }
 .ste-header-account-id { font-size: 2.5vh; }
 */
-.ste-help-title { font-size: 2.2vh; }
-.ste-header-tel { font-size: 2.2vh; }
-.ste-header-email { font-size: 2.2vh; }
-.ste-header-account-id { font-size: 2.2vh; }
-.ste-header-tab-item { box-shadow: 0 3px 2px black; }
-.ste-tab-item-title { font-weight: 600; text-transform: uppercase; text-decoration: none; }
+.ste-header-tel { color:#9195a2; font-size: 1.8vh; }
+.ste-header-email { color:#9195a2; font-size: 1.8vh; }
+.ste-header-email-label {color:#44484f; font-size:1.8vh;}
+.ste-header-tab-item p { padding: 20px 40px 20px 40px;  }
+.ste-tab-item-title { font-weight: 600; color:#abafba; text-decoration: none !important; }
 .ste-form-label { font-weight: 600; }
-.ste-form-creator-container { min-height: 340px; } 
+.ste-form-creator-container {min-height: 650px; } 
 /*.ste-form-creator-container {min-height: 500px; } changed */
 .ste-form-stiky-tag { top: -10px; left: 10px; background: #f1f1f1; padding: 2px; }
-.ste-form-btn-show-shortcode { box-shadow: 3px 3px black; }
-
+/* .ste-form-btn-show-shortcode { box-shadow: 3px 3px black; } */
+.white, .white .icon {
+  color: #fff !important;
+}
 
 .ste-fields img{
   width: 100%;
@@ -231,27 +274,26 @@
 }
 
 .ste-builder-field {
-    background-color: aliceblue;
+    background-color: #f9f9f9;
     padding: 10px;
     width: 55% !important;
     margin-bottom: 15px;
 }
 .ste-builder-field label{
-  font-weight: 700;
+  font-weight: 600;
 }
 .ste-builder-field .ste-field{
   height: 2rem;
   width: 100%;
-  margin-top: 10px;
 }
+.ste-icon-field {padding:10px;}
 .ste-remove-field {
-    background-color: #0d8eff;
-    border: 1px solid #0d8eff;
-    color: #ffffff;
-    border-radius: 3px;
-    padding: 4px 8.25px;
+    color: #000;
+    padding: 4px;
 }
-.sign-up-button.yh{
+.remove_bal_field {background-color:#f9f9f9;
+border:none;}
+ .sign-up-button.yh{
   background: #6B3695;
     border-color: #6B3695;
 }
@@ -279,7 +321,7 @@
 }
 .ste-img{
   max-width: 100%;
-}
+} 
 /* custom- radio and checkbox */
 /* radio */
 /* The container */
@@ -519,21 +561,21 @@
 .ste-se-td-100 { width: 100%; }
 
 .ste-se-tr-even { background: #e8e8e8; }
-.ste-send-email-tbl-container { border: 2px solid #000000; }
 .ste-se-td.ste-se-td-20 { padding: 7px; }
 .ste-se-body { max-height: 150px; overflow-y: scroll; }
-.ste-se-thead .ste-se-tr { background: #cacaca; }
 
 .ste-autosponder-creator { border: 2px solid #000000; }
 
-.ste-send-email-tbl .ste-se-body .ste-se-td { font-size: 2vh; }
-.ste-send-email-tbl .ste-se-thead .ste-se-td { font-size: 2.3vh; font-weight: 600; }
+.ste-send-email-tbl .ste-se-body .ste-se-td { font-size: 1vh; }
+.ste-send-email-tbl .ste-se-thead .ste-se-td { font-size: 1.5vh; font-weight: 600; color: #7c7d81; }
+.ste-form-color { color: #7c7d81; }
 .cke_editor_ste-sc-ckeditor { width: 80%; }
 
-.ste-btn-preview, .ste-btn-draft { width: 100%; padding: 8px 0; font-size: 2.5vh; background: #ffc107; border: none; box-shadow: 2px 2px 3px #bfbfbf; margin-bottom: 1rem; }
-.ste-btn-autoresponder, .ste-btn-send-email { width: 100%; background: #28a745; color: #ffffff; border: none; padding: 10px 0; font-size: 2.5vh; box-shadow: 2px 2px 3px #bfbfbf; margin-bottom: 1rem; }
-.ste-btn-cancel { background: #dc3545; color: #ffffff; border: none; font-size: 2.5vh; padding: 10px 0; width: 100%; box-shadow: 2px 2px 3px #bfbfbf; margin-bottom: 1rem; }
-
+/* .ste-btn-preview, .ste-btn-draft { width: 100%; padding: 8px 0; font-size: 2.5vh; background: #ffc107; border: none; box-shadow: 2px 2px 3px #bfbfbf; margin-bottom: 1rem; } */
+/* .ste-btn-autoresponder{ width: auto; cursor:pointer; background: #5ac858; color: #ffffff; border: 1px solid; border-radius: 5px; padding: 12px 20px 12px 20px; font-size: 1.2vh; } */
+/* .ste-btn-cancel {width: auto; cursor:pointer;background: whitesmoke; color: #5c99e4; border: 1px solid #5c99e4 ; border-radius: 5px; font-size: 1.5vh; padding: 10px 30px 10px 30px;  } */
+/* .ste-btn-send-email{width: auto; cursor:pointer; background:#3688e1; color: #ffffff;  border: 1px solid; border-radius: 5px; font-size: 1.5vh; padding: 10px 18px 10px 18px;} */
+.btn-light {background: #fff!important; color: #5c99e4 !important; border: 1px solid #5c99e4 !important;}
 
 .ste-fontweight-6{
   font-weight: 600;
@@ -563,7 +605,7 @@
     text-decoration: none;
 }
 .ste-sign-up-button a span {
-    color: #ffffff;
+    color: #fff;
     padding: 10px;
 }
 
@@ -651,8 +693,78 @@ display: none;
  .ste-modal-footer{
   padding: 15px;
  }
+ /* icons */
+ .icon-settings:before {
+   color:#9ba0ad;
+   background-color:#414550;
+   border-radius:50%;
+   padding:10px;
+ }
+ .icon-phone-call:before {
+  color:#9ba0ad;
+  background-color:#414550;
+  border-radius:50%;
+  padding:10px;
+}
+ .social_buttons{
+float:left;
+ }
+ .ste-bg-add-img {
+  background-image: url("admin\images\add.png"); 
+   font-size:80px !important;
+   color:#d4d7e2;
+ }
+ .ste-bg-add-text {
+  font-size:20px !important;
+  color:#d4d7e2;
+}
+ /* .bg-data-placeholder{
+height: 200px;
+background-color:red;
+ }
+ icons end */
+/* drag icons css */
 
- .ste-drag-text-box img{
+ .stedb-fields .inner-col {
+  /* border:0.5px solid #e1e4e4; */
+  text-align:center;
+  padding:20px;
+  cursor:pointer;
+}
+.stedb-fields .inner-col:hover{
+  background-color:#464a54;
+  border-radius:5px;
+  color:#fff !important;
+}
+
+.ste-fields-icon {
+  border:0.5px solid #e1e4e4;
+  text-align:center;
+  width:auto;
+  height:auto;
+  padding:10px;
+  cursor:pointer;
+}
+/* .ste-fields-icon:hover {
+  background-color:#464a54;
+  border-radius:10px;
+  color:#fff !important;
+} */
+.inner-col:hover > .icon {  
+  color:#fff;
+} 
+.inner-col:hover > .word {  
+  color:#fff;
+}
+.icon {
+  font-size:2vh;
+}
+.word{
+  font-size: 1.5vh;
+} 
+
+/* drag icon css end */
+ /* .ste-drag-text-box img{
     height: 55px;
     object-fit: contain;
     object-position: left;
@@ -688,7 +800,7 @@ display: none;
  }
  .ste-admin-icon-vertical{
   height: 30px;
- }
+ } 
 
 /* responsive design */
 @media only screen and (min-width : 1441px) and (max-width : 2560px) {
