--- a/public/css/ste-style.css
+++ b/public/css/ste-style.css
@@ -539,7 +539,7 @@
     text-decoration: none;
 }
 .ste-sign-up-button a span {
-    color: #ffffff;
+    color: #fff !important;
     padding: 10px;
 }
 
