--- a/admin/css/stedb-fonts.css
+++ b/admin/css/stedb-fonts.css
@@ -38,22 +38,22 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-add:before {
+.icon-account-id:before {
   content: "\61";
 }
-.icon-align:before {
+.icon-add:before {
   content: "\62";
 }
-.icon-auto-response:before {
+.icon-align:before {
   content: "\63";
 }
-.icon-calendar:before {
+.icon-auto-response:before {
   content: "\64";
 }
-.icon-check-box:before {
+.icon-calendar:before {
   content: "\65";
 }
-.icon-check-box-1:before {
+.icon-check-box:before {
   content: "\66";
 }
 .icon-close:before {
@@ -62,51 +62,60 @@
 .icon-code:before {
   content: "\68";
 }
-.icon-dropdown:before {
+.icon-copy:before {
   content: "\69";
 }
-.icon-edit:before {
+.icon-date:before {
   content: "\6a";
 }
-.icon-email:before {
+.icon-delete:before {
   content: "\6b";
 }
-.icon-garbage:before {
+.icon-dropdown:before {
   content: "\6c";
 }
-.icon-hashtag:before {
+.icon-edit:before {
   content: "\6d";
 }
-.icon-link:before {
+.icon-email:before {
   content: "\6e";
 }
-.icon-option:before {
+.icon-hashtag:before {
   content: "\6f";
 }
-.icon-phone-call:before {
+.icon-link:before {
   content: "\70";
 }
-.icon-radio-button:before {
+.icon-option:before {
   content: "\71";
 }
-.icon-send:before {
+.icon-phone-call:before {
   content: "\72";
 }
-.icon-settings:before {
+.icon-radio-button:before {
   content: "\73";
 }
-.icon-text:before {
+.icon-send:before {
   content: "\74";
 }
-.icon-text-area:before {
+.icon-settings:before {
   content: "\75";
 }
-.icon-tick:before {
+.icon-swap:before {
   content: "\76";
 }
-.icon-time:before {
+.icon-text:before {
   content: "\77";
 }
-.icon-view:before {
+.icon-text-area:before {
   content: "\78";
+}
+.icon-tick:before {
+  content: "\79";
+}
+.icon-time:before {
+  content: "\7a";
+}
+.icon-view:before {
+  content: "\41";
 }
