--- a/admin/css/ste-style.css
+++ b/admin/css/ste-style.css
@@ -2194,7 +2194,7 @@ background-color:red;
 /* pop up */
 
 .modal-content {
-    width: 90% !important;
+    width: 80% !important;
     border-radius: 10px !important;
 }
 
@@ -2217,7 +2217,8 @@ background-color:red;
     font-size: 10px;
     font-weight: 600;
     background: #EAECEB;
-    padding: 8px;
+    opacity: 1;
+    padding: 8px 10px 8px 10px;
     border-radius: 50%;
 }
 
@@ -2227,6 +2228,15 @@ background-color:red;
     height: 140px;
 }
 
+.stedb_modal_action_handler .alert-danger,
+.stedb_modal_action_handler .alert-success {
+    background: none;
+    border: none;
+    padding: 10px;
+    margin-bottom: 0px;
+    margin-left: 40px;
+}
+
 .modal-body .form-group .icon {
     color: #000;
     font-size: 12px;
@@ -2234,7 +2244,7 @@ background-color:red;
 }
 
 .modal-body .stedb_tagline {
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
     line-height: 1.5;
     /* font-weight: 600; */
@@ -2252,20 +2262,28 @@ background-color:red;
 }
 
 .modal-body .form-group input {
+    width: 50px;
+    height: 66px;
     margin: 0 10px;
     text-align: center;
     line-height: 80px;
     font-size: 40px;
     border: solid 1px #ccc;
-    /* box-shadow: 0 0 5px #ccc inset; */
     outline: none;
-    width: 15%;
     transition: all .2s ease-in-out;
     border-radius: 10px;
 }
 
 .modal-body .form-group input:focus {
     border: 2px solid #5AC858;
+}
+
+.modal-body .form-group input::-moz-selection {
+    background: transparent;
+}
+
+.modal-body .form-group input::selection {
+    background: transparent;
 }
 
 .modal-body .stedb_popup_submit .btn {
