--- a/admin/css/ste-style.css
+++ b/admin/css/ste-style.css
@@ -10,22 +10,22 @@
 
 ::-webkit-input-placeholder {
     /* Chrome/Opera/Safari */
-    color: #000000;
+    color: #6C757D;
 }
 
 ::-moz-placeholder {
     /* Firefox 19+ */
-    color: #000000;
+    color:#6C757D;
 }
 
 :-ms-input-placeholder {
     /* IE 10+ */
-    color: #000000;
+    color:#6C757D;
 }
 
 :-moz-placeholder {
     /* Firefox 18- */
-    color: #000000;
+    color:#6C757D;
 }
 
 
@@ -70,11 +70,49 @@
     display: inline-block;
 }
 
-.ste-col-60 {
-    width: 60%;
+.ste-mb-1.form-group.form_builder_field_preview.col50p {
+    width: 50%;
+    float: left;
+}
+
+.ste-mb-1.form-group.form_builder_field_preview.col50p .ste-col-60{
+    width: 100%;  
 }
 
 
+.ste-col-40 {
+    width: 40%;
+}
+.ste-col-60 {
+    width: 70%;
+    /* margin-left: 10px; */
+}
+
+.ste-col-50 {
+    width: 40% !important;
+    margin-right: 40px;
+    margin-left: 20px;
+}
+.ste-col-50-prev {
+    width: 300px;
+    margin-right: 40px;
+    /* margin-left: 20px; */
+    
+}
+.ste-col-social {
+    width: 50% !important;
+    margin-right: 40px;
+    margin-left: 20px;
+}
+.ste-margin {
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.ste-col-40 {
+    width: 40%;
+}
 /* Display Classes */
 
 .ste-block {
@@ -144,15 +182,25 @@ a.ste-tab-item {
     min-height: 47vh;
 }
 
-.ste-builder-field {
+.ste-builder-field.ste-col-full {
+    margin-right: 10px;
     padding: 10px;
-    width: 65% !important;
-    margin-bottom: 15px;
+    width: 50% !important;
+    margin-bottom: 50px;
     cursor: all-scroll;
 }
 
+.ste-builder-field.ste-row-full {
+    width: 100% !important;
+    border: 1px solid #d4d8d8;
+    height: 50% !important;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    padding-top: 10px;
+    padding-bottom:10px;
+}
 .ste-builder-field:hover {
-    border: 1px dashed #d4d8d8;
+    border: 1px dashed;
 }
 
 .ste-builder-field label {
@@ -164,8 +212,12 @@ a.ste-tab-item {
     width: 100%;
 }
 
+.ste-builder-field .ste-col {
+    width: 50% !important;
+}
+
 .ste-icon-field {
-    padding: 10px;
+    margin-bottom: 5px;
 }
 
 .ste-remove-field {
@@ -184,7 +236,7 @@ a.ste-tab-item {
     background-color: #F8F2FA;
     border: 1px solid #6B3695;
     border-radius: 5px;
-    width: 50%;
+    width: 60%;
     font-size: 14px;
     display: flex;
     padding: 10px;
@@ -202,7 +254,7 @@ a.ste-tab-item {
     background: #FFF5F4;
     border: 1px solid #DF4B38;
     border-radius: 5px;
-    width: 50%;
+    width: 60%;
     font-size: 14px;
     display: flex;
     padding: 10px;
@@ -220,7 +272,7 @@ a.ste-tab-item {
     background: #F2F8FB;
     border: 1px solid #117BB8;
     border-radius: 5px;
-    width: 50%;
+    width: 60%;
     font-size: 14px;
     display: flex;
     padding: 10px;
@@ -826,12 +878,12 @@ img#loader1 {
     margin-right: 5px;
 }
 
-.ste-round-setting-icon {
+
+.ste-round-setting-icon{
     align-self: center !important;
     margin-left: 10px;
     cursor: pointer;
 }
-
 .ste-header-phone {
     border-right: 1px solid #414550;
 }
@@ -860,6 +912,9 @@ img#loader1 {
 .container-fluid {
     padding: 0px !important;
     margin: 0px !important;
+}
+.ste-top-container-border{
+    border-bottom: 1px solid #D4D7E2;
 }
 
 .form-builder-box {
@@ -902,10 +957,6 @@ img#loader1 {
 
 .col-9 .ste-text {
     color: #878b9b;
-}
-
-.ste-form-builder-btn {
-    text-align: right;
 }
 
 .send-email-section {
@@ -1127,10 +1178,14 @@ img#loader1 {
 .mini .nav-icon:before {
     content: "\2190";
     font-family: FontAwesome;
-    font-size: 40px;
+    font-size: 20px;
     cursor: pointer;
 }
-
+.mini .email-list-title {
+    color: #494d53;
+    font-weight: 600 ;
+    font-size: 14px;
+}
 .mini .shouldShowWhenMinified {
     width: 50%;
 }
@@ -1146,10 +1201,14 @@ img#loader1 {
 .normal .nav-icon:before {
     content: "\2192";
     font-family: FontAwesome;
-    font-size: 40px;
+    font-size: 20px;
     cursor: pointer;
 }
-
+.normal .email-list-title {
+    color: #494d53;
+    font-weight: 600 ;
+    font-size: 14px;
+}
 
 /* report */
 
@@ -1320,4 +1379,21 @@ img#loader1 {
     position: absolute;
     margin-top: -8px;
     margin-left: 10px;
+  }
+ /* tootl tip  */
+ .ste-tool-tips{
+     margin: 30px 0px 0px 30px;
+     text-decoration: underline;
+     font-weight: bold;
+     cursor: help;
+ }  
+  [data-title]:hover::before {
+    content: attr(data-title);
+    position: absolute;
+    padding: 3px 6px;
+    margin-top:25px ;
+    border-radius: 2px;
+    background: #000;
+    color: #fff;
+    font-size: 12px;
   }
