--- a/public/css/ste-style.css
+++ b/public/css/ste-style.css
@@ -240,21 +240,57 @@
     padding: 4px 8.25px;
 }
 .sign-up-button.yh{
-  background: #6B3695;
-    border-color: #6B3695;
+  background-color: #F8F2FA;
+  border: 1px solid #6B3695;
+  border-radius: 5px;
+  width: 80%;
+  font-size: 14px;
+  display: flex;
+  padding: 10px;
 }
 
 .sign-up-button.gp{
-  background:#DF4B38;
-    border-color:#DF4B38;
+  background: #FFF5F4;
+    border: 1px solid #DF4B38;
+    border-radius: 5px;
+    width: 80%;
+    font-size: 14px;
+    display: flex;
+    padding: 10px;
 }
 
 .sign-up-button.ln{
-  background: #117BB8;
-    border-color: #117BB8;
+  background: #F2F8FB;
+  border: 1px solid #117BB8;
+  border-radius: 5px;
+  width: 80%;
+  font-size: 14px;
+  display: flex;
+  padding: 10px;
+}
+.gp a span {
+  color: #DF4B38;
+  margin-left: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  text-decoration: none;
+}
+.yh a span {
+  color: #6B3695;
+  margin-left: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  text-decoration: none;
+}
+.ln a span {
+  color: #117BB8;
+  margin-left: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  text-decoration: none;
 }
 
-.sign-up-button a {
+/* .sign-up-button a {
     color:#fff;
     font-size: 12px;
     
@@ -264,7 +300,7 @@
 .sign-up-button a span{
   color: #ffffff;
   padding-left: 10px;
-}
+} */
 .ste-img{
   max-width: 100%;
 }
@@ -531,17 +567,19 @@
     font-size: 16px;
     font-weight: bold;
 }
-.ste-sign-up-button a {
+/* .ste-sign-up-button a {
     color:#fff;
     font-size: 12px;
     display: flex;
     padding:0px 12px;
     text-decoration: none;
-}
-.ste-sign-up-button a span {
-    color: #fff !important;
-    padding: 10px;
-}
+} */
+/* .ste-sign-up-button a span {
+  color: #DF4B38;
+  margin-left: 10px;
+  font-size: 14px;
+  font-weight: 500;
+} */
 
 img#loader {
     width: 100px;
