--- a/admin/css/stedb-fonts.css
+++ b/admin/css/stedb-fonts.css
@@ -1,19 +1,19 @@
 @charset "UTF-8";
 
 @font-face {
-  font-family: "stedb";
-  src:url("fonts/stedb.eot");
-  src:url("fonts/stedb.eot?#iefix") format("embedded-opentype"),
-    url("fonts/stedb.woff") format("woff"),
-    url("fonts/stedb.ttf") format("truetype"),
-    url("fonts/stedb.svg#stedb") format("svg");
+  font-family: "bhk-icons";
+  src:url("fonts/bhk-icons.eot");
+  src:url("fonts/bhk-icons.eot?#iefix") format("embedded-opentype"),
+    url("fonts/bhk-icons.woff") format("woff"),
+    url("fonts/bhk-icons.ttf") format("truetype"),
+    url("fonts/bhk-icons.svg#bhk-icons") format("svg");
   font-weight: normal;
   font-style: normal;
 
 }
 
 [data-icon]:before {
-  font-family: "stedb" !important;
+  font-family: "bhk-icons" !important;
   content: attr(data-icon);
   font-style: normal !important;
   font-weight: normal !important;
@@ -27,7 +27,7 @@
 
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
-  font-family: "stedb" !important;
+  font-family: "bhk-icons" !important;
   font-style: normal !important;
   font-weight: normal !important;
   font-variant: normal !important;
@@ -44,78 +44,81 @@
 .icon-add:before {
   content: "\62";
 }
-.icon-align:before {
+.icon-add-row:before {
   content: "\63";
 }
-.icon-auto-response:before {
+.icon-align:before {
   content: "\64";
 }
-.icon-calendar:before {
+.icon-auto-response:before {
   content: "\65";
 }
-.icon-check-box:before {
+.icon-calendar:before {
   content: "\66";
 }
-.icon-close:before {
+.icon-check-box:before {
   content: "\67";
 }
-.icon-code:before {
+.icon-close:before {
   content: "\68";
 }
-.icon-copy:before {
+.icon-code:before {
   content: "\69";
 }
-.icon-date:before {
+.icon-copy:before {
   content: "\6a";
 }
-.icon-delete:before {
+.icon-date:before {
   content: "\6b";
 }
-.icon-dropdown:before {
+.icon-delete:before {
   content: "\6c";
 }
-.icon-edit:before {
+.icon-dropdown:before {
   content: "\6d";
 }
-.icon-email:before {
+.icon-edit:before {
   content: "\6e";
 }
-.icon-hashtag:before {
+.icon-email:before {
   content: "\6f";
 }
-.icon-link:before {
+.icon-hashtag:before {
   content: "\70";
 }
-.icon-option:before {
+.icon-link:before {
   content: "\71";
 }
-.icon-phone-call:before {
+.icon-option:before {
   content: "\72";
 }
-.icon-radio-button:before {
+.icon-phone-call:before {
   content: "\73";
 }
-.icon-send:before {
+.icon-radio-button:before {
   content: "\74";
 }
-.icon-settings:before {
+.icon-send:before {
   content: "\75";
 }
-.icon-swap:before {
+.icon-settings:before {
   content: "\76";
 }
-.icon-text:before {
+.icon-swap:before {
   content: "\77";
 }
-.icon-text-area:before {
+.icon-text:before {
   content: "\78";
 }
-.icon-tick:before {
+.icon-text-area:before {
   content: "\79";
 }
-.icon-time:before {
+.icon-tick:before {
   content: "\7a";
 }
-.icon-view:before {
+.icon-time:before {
   content: "\41";
+}
+.icon-view:before {
+  content: "\42";
 }
