--- a/public/css/ste-style.css
+++ b/public/css/ste-style.css
@@ -239,31 +239,35 @@
     border-radius: 3px;
     padding: 4px 8.25px;
 }
-.sign-up-button.yh{
+.sign-up-button.yh img{
+  display: inline-block;
+}
+.sign-up-button.yh a{
   background-color: #F8F2FA;
   border: 1px solid #6B3695;
   border-radius: 5px;
-  width: 80%;
   font-size: 14px;
   display: flex;
   padding: 10px;
 }
-
+.sign-up-button.gp img{
+  display: inline-block;
+}
 .sign-up-button.gp{
-  background: #FFF5F4;
+    background:#FFF5F4;
     border: 1px solid #DF4B38;
     border-radius: 5px;
-    width: 80%;
     font-size: 14px;
     display: flex;
-    padding: 10px;
+    padding: 10px;   
 }
-
+.sign-up-button.ln img{
+  display: inline-block;
+}
 .sign-up-button.ln{
   background: #F2F8FB;
   border: 1px solid #117BB8;
   border-radius: 5px;
-  width: 80%;
   font-size: 14px;
   display: flex;
   padding: 10px;
@@ -289,18 +293,20 @@
   font-weight: 500;
   text-decoration: none;
 }
-
-/* .sign-up-button a {
-    color:#fff;
-    font-size: 12px;
-    
-    padding:0px 12px;
-    text-decoration: none;
+.stedb-col {
+  max-width: 100%;
+  /* display: inline-block; */
+  flex-grow: 1;
+  flex-basis: 0;
+  -webkit-box-flex: 1;
+  margin: 10px 10px 10px 10px;
 }
-.sign-up-button a span{
-  color: #ffffff;
-  padding-left: 10px;
+/* .li_row{
+  display:flex;
 } */
+.stedb-li-row-flex {
+  display:flex;
+}
 .ste-img{
   max-width: 100%;
 }
