--- a/admin/css/ste-style.css
+++ b/admin/css/ste-style.css
@@ -1495,12 +1495,35 @@ font-size: 14px;
     color: #fff !important;
 }
 .message-box{
-    border:1px solid black;
-    height:200px;
+    border:1px dashed #d7e7f9;
+    height:300px;
     width:100%;
     color:#DCDDC9;
+    text-align: center;
     font-size: 20px;
-    margin: 0 auto;
-    text-align:center;
     background-color:#2F333B ;
 }
+.message-text{
+    position: absolute; 
+     margin-top: 150px;
+     margin-left: -140px;;
+}
+@-webkit-keyframes downarrow {
+    0% { -webkit-transform: translateY(0); opacity: 0.4 }
+    100% { -webkit-transform: translateY(0.4em); opacity: 0.9 }
+  }
+  .arrow {
+    border-color: transparent;
+    border-style: solid;
+    border-width: 0 2em;
+    height: 0;
+    text-indent: -9999px;
+    transform-origin: 50% 50%;
+    width: 0;
+    margin-left: 170px;
+    bottom: 120px;
+  }
+  .down {
+    -webkit-animation: downarrow 0.6s infinite alternate ease-in-out;
+    border-top:2em solid;
+  }
