--- a/admin/css/ste-style.css
+++ b/admin/css/ste-style.css
@@ -1506,8 +1506,8 @@ font-size: 14px;
     text-indent: -9999px;
     transform-origin: 50% 50%;
     width: 0;
-    left:140px;
-    bottom: 120px;
+    left:51%;
+    bottom: 110px;
   }
   .down {
     -webkit-animation: downarrow 0.6s infinite alternate ease-in-out;
