--- a/admin/css/ste-style.css
+++ b/admin/css/ste-style.css
@@ -1058,7 +1058,14 @@ img#loader1 {
     border: 1px solid #c5c9d4 !important;
     border-radius: 5px;
 }
-
+.ste-pop-email{
+    margin-bottom: 10px;
+    padding: 8px !important;
+    width:85%;
+    margin-left: 23px;
+    border: 1px solid #c5c9d4 !important;
+    border-radius: 5px;
+}
 .cke_chrome {
     border: 1px solid #c5c9d4;
     border-radius: 5px;
@@ -1220,6 +1227,9 @@ img#loader1 {
     color: #494d53;
     font-weight: 600 ;
     font-size: 14px;
+}
+.address-text{
+    padding: 10px;
 }
 
 /* report */
