Subscription process fixes

--- a/public/css/ste-style.css
+++ b/public/css/ste-style.css
@@ -1065,3 +1065,22 @@ img#loader {
   padding: 0.3rem;
   width: 100%;
 }
+
+.ste-alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.ste-alert-success {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+}
+
+.ste-alert-danger {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+}
